# code

./: .vimrc  data.CSV  作业1.docx
.devcontainer/: Dockerfile  devcontainer.json
acm/: factor.cpp  templet.cpp
acm/ccpc/20240908/: 1.cpp  11.cpp  2.cpp
acm/cf/958div2/: A.cpp  (+1 more)
acm/segment_tree_base/: B.cpp  B_1.cpp  C.cpp  D.cpp
acm/test/: 1990C.cpp
acm/train/: A.cpp  C.cpp  C_1.cpp  Ct.cpp  D.cpp  D_1.cpp  E.cpp  F.cpp  F_1.cpp  G.cpp  G_1.cpp  H.cpp  I.cpp  I_1.cpp
c_cpp/: .test.cpp.swp  ap.cpp  m.cpp  t.cpp  t2.cpp  thread.cpp
c_cpp/output/: ap  m  t  thread
cpp_c/: test.cpp  test2.cpp
cpp_c/output/: test  test2
ds/: 5.c
ds/Headers/: List.h  Priority_Queue.h  Queue.h  Stack.h
ds/src/: 2.c  5.c  P1.c  Untitled-1.c
java/: MyClass.java  MyClassTest.java  build.gradle  dog.java  dog_main.java  exception.java  object.java  t.java
math/2023B/: 1.py  2.py  3.py
math/2024A/: compute.py  pro1_.py  pro2_.py  pro3.py  pro4.py  rectangle.py  result1.xlsx  result2.xlsx  result4.xlsx  result4_par.xlsx  simulate.py
math/prac/: result1.xlsx  result2.xlsx  result2_bigqun.xlsx
opengl/: CMakeLists.txt  opengl.code-workspace
opengl/include/glad/: glad.h
opengl/lib/: glfw3.lib
opengl/src/: glad.c  main.cpp
opengl/src/Trangle/: Trangle.cpp
py/: SIGINT.py  Signal.py  aa.sql  goods.json  sb.sql  sql.sql  test.py
py/hw2/: Pro_1.py  Pro_2.py  Pro_3.py  Pro_4.py  main.py
py/hw3/: Pro_1.py  Pro_2.py  main.py
py/hw4/: main.py  sql.py  tk.py
py/math/: iterate.py
se/hwcsv/: data.py
typst/: config.ts  hw.typ  hw2.typ  lab1.typ  t.typ  test1.typ
(+239 files in other folders)
